got rid of dynamic class loading